--- a/addons/website_twitter/views/res_config_settings_views.xml
+++ b/addons/website_twitter/views/res_config_settings_views.xml
@@ -16,29 +16,31 @@
                             <label class="col-lg-3 o_light_label" string="API secret" for="twitter_api_secret"/>
                             <field name="twitter_api_secret" password="True" class="oe_inline"/>
                         </div>
-                        <a data-bs-toggle="collapse" href="#" data-bs-target="#twitter_tutorial" aria-label="Twitter tutorial">
-                            <i class="oi oi-arrow-right"/>
-                            Show me how to obtain the Twitter API key and Twitter API secret
-                        </a>
-                        <div class="row mt16 collapse" id="twitter_tutorial">
-                            <blockquote class="small">
-                                <h2>How to configure the Twitter API access</h2>
-                                <ol>
-                                    <li>Log in or create an account on <a href="https://developer.twitter.com/" target="new"> https://developer.twitter.com/</a></li>
-                                    <li>Once connected, and if not already done, complete the Twitter portal access process on <a href="https://developer.twitter.com/portal/" target="new">https://developer.twitter.com/portal/</a></li>
-                                    <li>On the <a href="https://developer.twitter.com/portal/" target="new">Twitter Portal</a>, <strong>create a project</strong> with the following information:
-                                        <ul>
-                                            <li><strong>Name: </strong> Odoo Twitter Integration</li>
-                                            <li><strong>Use Case: </strong> Embedding Tweets in a website</li>
-                                            <li><strong>Description: </strong> Odoo Twitter Integration</li>
-                                            <li><strong>App Name: </strong> choose a unique name</li>
-                                        </ul>
-                                    </li>
-                                    <li>Copy/Paste the API Key and API Key Secret values into the above fields</li>
-                                    <li>Get Elevated access by going to <a href="https://developer.twitter.com/en/portal/products" target="new">https://developer.twitter.com/en/portal/products</a>, click on <strong>Elevated</strong> then on <strong>Apply</strong> and finally complete the form.</li>
-                                </ol>
-                            </blockquote>
-                        </div>
+                        <details>
+                            <summary class="btn btn-link text-start" aria-label="Twitter tutorial">
+                                <i class="oi oi-arrow-right"/>
+                                Show me how to obtain the Twitter API key and Twitter API secret
+                            </summary>
+                            <div class="row mt16" id="twitter_tutorial">
+                                <blockquote class="small">
+                                    <h2>How to configure the Twitter API access</h2>
+                                    <ol>
+                                        <li>Log in or create an account on <a href="https://developer.twitter.com/" target="new"> https://developer.twitter.com/</a></li>
+                                        <li>Once connected, and if not already done, complete the Twitter portal access process on <a href="https://developer.twitter.com/portal/" target="new">https://developer.twitter.com/portal/</a></li>
+                                        <li>On the <a href="https://developer.twitter.com/portal/" target="new">Twitter Portal</a>, <strong>create a project</strong> with the following information:
+                                            <ul>
+                                                <li><strong>Name: </strong> Odoo Twitter Integration</li>
+                                                <li><strong>Use Case: </strong> Embedding Tweets in a website</li>
+                                                <li><strong>Description: </strong> Odoo Twitter Integration</li>
+                                                <li><strong>App Name: </strong> choose a unique name</li>
+                                            </ul>
+                                        </li>
+                                        <li>Copy/Paste the API Key and API Key Secret values into the above fields</li>
+                                        <li>Get Elevated access by going to <a href="https://developer.twitter.com/en/portal/products" target="new">https://developer.twitter.com/en/portal/products</a>, click on <strong>Elevated</strong> then on <strong>Apply</strong> and finally complete the form.</li>
+                                    </ol>
+                                </blockquote>
+                            </div>
+                        </details>
                         <div class="row">
                             <label class="col-lg-3 o_light_label" string="Favorites From" for="twitter_screen_name"/>
                             <field name="twitter_screen_name" class="oe_inline"/>
