--- a/addons/l10n_in_ewaybill/views/l10n_in_ewaybill_views.xml
+++ b/addons/l10n_in_ewaybill/views/l10n_in_ewaybill_views.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="ewaybill_stock_action" model="ir.actions.act_window">
-        <field name="name">Ewaybill Stock</field>
+    <record id="ewaybill_invoice_action" model="ir.actions.act_window">
+        <field name="name">Ewaybill Invoice</field>
         <field name="res_model">l10n.in.ewaybill</field>
         <field name="view_mode">tree,form</field>
+        <field name="domain">[('country_id.code','=','IN')]</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Add
@@ -11,31 +12,32 @@
         </field>
     </record>
 
-    <record id="ewaybill_stock_tree_view" model="ir.ui.view">
-        <field name="name">ewaybill.stock.tree.view</field>
+    <record id="ewaybill_invoice_tree_view" model="ir.ui.view">
+        <field name="name">ewaybill.invoice.tree.view</field>
         <field name="model">l10n.in.ewaybill</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="stock_picking_id"/>
+                <field name="account_move_id"/>
                 <field name="date"/>
                 <field name="state"/>
             </tree>
         </field>
     </record>
 
-    <record id="ewaybill_stock_form_view" model="ir.ui.view">
-        <field name="name">ewaybill.stock.form.view</field>
+    <record id="ewaybill_invoice_form_view" model="ir.ui.view">
+        <field name="name">ewaybill.invoice.form.view</field>
         <field name="model">l10n.in.ewaybill</field>
         <field name="arch" type="xml">
             <form string="Stock Picking">
                 <header>
-                    <button name="ewaybill_send" string="Send E-waybill" class="oe_highlight" type="object" invisible="state != 'pending'"/>
-                    <button name="ewaybill_cancel" string="Cancel" class="oe_highlight" type="object" invisible="state != 'sent'"/>
-                    <button name="ewaybill_update_part_b" string="Update Part B" type="object" data-hotkey="k" invisible="state != 'sent'"/>
-                    <button name="ewaybill_update_transporter" string="Update Transporter" type="object" data-hotkey="k" invisible="state != 'sent'"/>
-                    <button name="ewaybill_extend_validity" string="Extend Validity" type="object" data-hotkey="k" invisible="state != 'sent'"/>
-                    <field name="state" widget="statusbar" statusbar_visible="pending,sent"/>
+                    <button name="ewaybill_send" string="Send E-waybill" class="oe_highlight" type="object" invisible="state in ('sent','cancel')"/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,sent"/>
                 </header>
+                <div class="alert alert-danger" role="alert" style="margin-bottom:0px;" invisible="state != 'error'">
+                    <div class="o_row">
+                        <field name="error_message"/>
+                    </div>
+                </div>
                 <sheet>
                     <div class="oe_title">
                         <h1>
@@ -44,8 +46,8 @@
                     </div>
                     <group>
                      <group>
-                        <field string="Stock Transfer" name="stock_picking_id"/>
-                        <field name="type_id"/>
+                        <field string="Invoice" name="account_move_id"/>
+                        <field name="type_id" domain="[('code', 'in', ('INV', 'BIL', 'BOE'))]"/>
                      </group>
                      <group>
                         <field name="partner_id" string="Customer" />
@@ -55,65 +57,23 @@
                     </group>
                     <group>
                     </group>
-                    <group>
+                    <group name="part-b">
                         <group>
                             <field name="mode"/>
+                            <field name="vehicle_type" invisible="mode != '1'" required="mode == '1'"/>
+                            <field name="vehicle_no" invisible="mode != '1'" required="mode == '1'"/> 
                             <field name="transporter_id"/>
                             <label for="distance"/>
                             <div class="o_row" name="distance">
                                 <field name="distance"/>
                                 <span>km</span>
                             </div>
-                            <field name="vehicle_type" invisible="mode != '1'" required="mode == '1'"/>
-                            <field name="vehicle_no" invisible="mode != '1'" required="mode == '1'"/> 
                         </group>
                         <group>
                             <field name="transportation_doc_no" required="mode in ['2','3','4']"/>
                             <field name="transportation_doc_date" required="mode in ['2','3','4']"/>
                         </group>
                     </group>
-                    <group string="Cancel Ewaybill" invisible="state == 'pending'">
-                        <group>
-                            <field name="cancel_reason" />
-                        </group>
-                        <group>
-                            <field name="cancel_remarks"/>
-                        </group>
-                    </group>
-                    <notebook>
-                        <page string="Item Details">
-                            <field name="ewaybill_line_ids" mode="tree,kanban">
-                                <tree editable="bottom" create="0">
-                                    <field name="currency_id" column_invisible="1"/>
-                                    <field name="product_id" readonly="1" force_save="1"/>
-                                    <field name="quantity" readonly="1" string="Quantity" force_save="1"/>
-                                    <field name="price_unit" />
-                                    <field name="tax_ids" widget="many2many_tags" />
-                                    <field name="igst_rate" optional="hide"/>
-                                    <field name="igst_amount" optional="hide"/>
-                                    <field name="cgst_rate" optional="hide"/>
-                                    <field name="cgst_amount" optional="hide"/>
-                                    <field name="sgst_rate" optional="hide"/>
-                                    <field name="sgst_amount" optional="hide"/>
-                                    <field name="cess_rate" optional="hide"/>
-                                    <field name="cess_amount" optional="hide"/>
-                                    <field name="cess_non_advol_rate" optional="hide"/>
-                                    <field name="cess_non_advol_amount" optional="hide"/>
-                                    <field name="other_amount" optional="hide"/>
-                                    <field name="price_subtotal"/>
-                                </tree>
-                            </field>
-                            <group name="note_group" col="6" class="mt-2 mt-md-0">
-                                <group colspan="4">
-                                </group>
-                                <group class="oe_subtotal_footer oe_right" colspan="2" name="sale_total">
-                                    <field name="currency_id" invisible="1"/>
-                                    <field name="tax_totals" widget="account-tax-totals-field" nolabel="1" colspan="2" readonly="1"/>
-                                </group>
-                                <div class="clearfix"/>
-                            </group>
-                        </page>
-                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids"/>
@@ -123,4 +83,5 @@
             </form>
         </field>
     </record>
+
 </odoo>
