[FIX] point_of_sale: correctly show bill when printing from mobile
Current behavior:
When printing a bill from a mobile device, the bill is not correctly
displayed. The pdf is completely blank.

Steps to reproduce:
- Go on a mobile device
- Go to POS restaurant
- Create an order
- Click on the bill button
- Click on the print button

opw-3507918

--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -1739,8 +1739,9 @@ td {
     }
     .pos .receipt-screen .pos-receipt-container {
         position: absolute !important;
-        top: 0;
-        left: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
     .pos .receipt-screen .pos-receipt-container, .pos .receipt-screen .pos-receipt-container  * {
         visibility: visible;
