[IMP] base: required field (from view python expr) are add automatically
Goal:
* Simplified xml view ;
* prevent fields from being missing due to forgetfulness or access groups ;
* Simplified group checking and check the model and field groups.

Fields are added if they appear in python expressions (invisible,
column_invisible, readonly, required, context, domain). Added fields are
invisible and readonly. Some invisible fields are necessary in views for
other reasons such as onchanges.

This first commit fix the views validation (python expression using
field with a wrong groups).

This second commit adds the feature and some examples of view simplification
(removal of invisible fields).

Before this commits:
View validation performed a match between the combination of groups on the
required fields and the combination of groups on the fields where they
were used. Validation was only done for groups in xml views and did not
take into account restrictions on the model or fields.

After this commits:
Validation checks if the fields exist on the model and if the groups on
the fields match the combination of groups or values are used.
During post-processing, required fields are added as needed in the view
(cached) as invisible and readonly. These have all the groups for which
it might be required.
Include fix: do not transfer contextual domains (string) via related
which are not inherit

Task: Viewtiverse Avengers
task-3414068
task-3482092

Signed-off-by: Gorash <chm@odoo.com>

--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -819,9 +819,11 @@
                     <field name="lead_properties"/>
                     <button name="%(crm.action_lead_mail_compose)d" type="action" string="Email" icon="fa-envelope"/>
                     <button name="action_reschedule_meeting" class="text-warning" type="object" string="Reschedule"
-                        icon="fa-calendar" invisible="not my_activity_date_deadline or not activity_calendar_event_id"/>
+                        icon="fa-calendar" invisible="not my_activity_date_deadline or not activity_calendar_event_id"
+                        groups="base.group_user"/>
                     <button name="action_snooze" class="text-warning" type="object" string="Snooze 7d"
-                        icon="fa-bell-slash" invisible="not my_activity_date_deadline or activity_calendar_event_id"/>
+                        icon="fa-bell-slash" invisible="not my_activity_date_deadline or activity_calendar_event_id"
+                        groups="base.group_user"/>
                 </tree>
             </field>
         </record>
