--- a/addons/google_gmail/views/fetchmail_server_views.xml
+++ b/addons/google_gmail/views/fetchmail_server_views.xml
@@ -10,7 +10,8 @@
                 <field name="google_gmail_uri" invisible="1"/>
                 <field name="google_gmail_refresh_token" invisible="1"/>
                 <div invisible="server_type != 'gmail'"
-                    class="d-flex flex-row align-items-center" colspan="2">
+                    class="d-flex flex-row align-items-center" colspan="2"
+                    groups="base.group_system">
                     <span invisible="server_type != 'gmail' or not google_gmail_refresh_token"
                         class="badge text-bg-success">
                         Gmail Token Valid
