--- a/addons/microsoft_outlook/views/fetchmail_server_views.xml
+++ b/addons/microsoft_outlook/views/fetchmail_server_views.xml
@@ -12,7 +12,8 @@
                 <field name="microsoft_outlook_access_token" invisible="1"/>
                 <field name="microsoft_outlook_access_token_expiration" invisible="1"/>
                 <div invisible="server_type != 'outlook'"
-                    class="d-flex flex-row align-items-center" colspan="2">
+                    class="d-flex flex-row align-items-center" colspan="2"
+                    groups="base.group_system">
                     <span invisible="server_type != 'outlook' or not microsoft_outlook_refresh_token"
                         class="badge text-bg-success">
                         Outlook Token Valid
