--- a/addons/hr_attendance/views/hr_employee_view.xml
+++ b/addons/hr_attendance/views/hr_employee_view.xml
@@ -78,7 +78,7 @@
                         type="action"
                         invisible="total_overtime == 0.0"
                         context="{'search_default_employee_id': employee_ids}"
-                        groups="base.group_user"
+                        groups="hr.group_hr_user"
                         help="Amount of extra hours">
                     <div class="o_stat_info">
                         <span class="o_stat_value text-success" invisible="total_overtime &lt; 0">
