--- a/addons/hr/views/res_users.xml
+++ b/addons/hr/views/res_users.xml
@@ -141,7 +141,7 @@
                                     <field name="private_street" placeholder="Street..." class="o_address_street" readonly="not can_edit"/>
                                     <field name="private_street2" placeholder="Street 2..." class="o_address_street" readonly="not can_edit"/>
                                     <field name="private_city" placeholder="City" class="o_address_city" readonly="not can_edit"/>
-                                    <field name="private_state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_quick_create': True}" context="{'default_country_id': private_country_id}" readonly="not can_edit"/>
+                                    <field name="private_state_id" class="o_address_state" placeholder="State" options="{'no_open': True, 'no_quick_create': True}" context="{'default_country_id': private_country_id}" readonly="not can_edit" groups="hr.group_hr_user"/>
                                     <field name="private_zip" placeholder="ZIP" class="o_address_zip" readonly="not can_edit"/>
                                     <field name="private_country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}' readonly="not can_edit"/>
                                 </div>
