--- a/addons/stock/report/report_deliveryslip.xml
+++ b/addons/stock/report/report_deliveryslip.xml
@@ -113,49 +113,18 @@
                                     product + description + uom combinations
                                 2. If any packages are assigned => split products up by package (or non-package) and then apply use case 1 -->
                             <!-- If has destination packages => create sections of corresponding products -->
-                            <t t-if="o.has_packages" name="has_packages">
-                                <t t-set="packages" t-value="o.move_line_ids.mapped('result_package_id')"/>
-                                <t t-foreach="packages" t-as="package">
-                                    <t t-call="stock.stock_report_delivery_package_section_line"/>
-                                    <t t-set="package_move_lines" t-value="o.move_line_ids.filtered(lambda l: l.result_package_id == package)"/>
-                                    <!-- If printing lots/serial numbers => keep products in original lines -->
-                                    <t t-if="has_serial_number">
-                                        <tr t-foreach="package_move_lines" t-as="move_line">
-                                            <t t-call="stock.stock_report_delivery_has_serial_move_line"/>
-                                        </tr>
-                                    </t>
-                                    <!-- If not printing lots/serial numbers => merge lines with same product+description+uom -->
-                                    <t t-else="">
-                                        <t t-set="aggregated_lines" t-value="package_move_lines._get_aggregated_product_quantities(strict=True)"/>
-                                        <t t-call="stock.stock_report_delivery_aggregated_move_lines"/>
-                                    </t>
-                                </t>
-                                <!-- Make sure we do another section for package-less products if they exist -->
-                                <t t-set="move_lines" t-value="o.move_line_ids.filtered(lambda l: not l.result_package_id)"/>
-                                <t t-set="aggregated_lines" t-value="o.move_line_ids._get_aggregated_product_quantities(except_package=True)"/>
-                                <t t-if="move_lines or aggregated_lines" name="no_package_move_lines">
-                                    <t t-call="stock.stock_report_delivery_no_package_section_line" name="no_package_section"/>
-                                    <t t-if="has_serial_number">
-                                        <tr t-foreach="move_lines" t-as="move_line">
-                                            <t t-call="stock.stock_report_delivery_has_serial_move_line"/>
-                                        </tr>
-                                    </t>
-                                    <t t-elif="aggregated_lines">
-                                        <t t-call="stock.stock_report_delivery_aggregated_move_lines"/>
-                                    </t>
-                                </t>
-                            </t>
-                            <!-- No destination packages -->
-                            <t t-else="">
+                            <t t-foreach="picking_aggregated_lines[o]" t-as="package">
+                                <t t-call="stock.stock_report_delivery_package_section_line"/>
                                 <!-- If printing lots/serial numbers => keep products in original lines -->
                                 <t t-if="has_serial_number">
-                                    <tr t-foreach="o.move_line_ids" t-as="move_line">
+                                    <t t-set="package_move_lines" t-value="o.move_line_ids.filtered(lambda l: l.result_package_id == package)"/>
+                                    <tr t-foreach="package_move_lines" t-as="move_line">
                                         <t t-call="stock.stock_report_delivery_has_serial_move_line"/>
                                     </tr>
                                 </t>
-                                <!-- If not printing lots/serial numbers => merge lines with same product -->
-                                <t t-else="" name="aggregated_move_lines">
-                                    <t t-set="aggregated_lines" t-value="o.move_line_ids._get_aggregated_product_quantities()"/>
+                                <!-- If not printing lots/serial numbers => merge lines with same product+description+uom -->
+                                <t t-else="">
+                                    <t t-set="aggregated_lines" t-value="picking_aggregated_lines[o][package]"/>
                                     <t t-call="stock.stock_report_delivery_aggregated_move_lines"/>
                                 </t>
                             </t>
@@ -267,14 +236,8 @@
     <template id="stock_report_delivery_package_section_line">
         <tr t-att-class="'bg-200 fw-bold o_line_section'">
             <td colspan="99" name="package_info">
-                <span t-field="package.name"/>
-            </td>
-        </tr>
-    </template>
-    <template id="stock_report_delivery_no_package_section_line">
-        <tr t-att-class="'bg-200 fw-bold o_line_section'">
-            <td colspan="99" name="no_package_info">
-                <span>Products with no package assigned</span>
+                <span t-if="package" t-field="package.name"/>
+                <span t-else="">Products with no package assigned</span>
             </td>
         </tr>
     </template>
