--- a/addons/purchase/views/portal_templates.xml
+++ b/addons/purchase/views/portal_templates.xml
@@ -127,14 +127,14 @@
   </template>
 
   <template id="portal_my_purchase_order" name="Purchase Order" inherit_id="portal.portal_sidebar" primary="True">
-      <xpath expr="//div[hasclass('o_portal_sidebar')]" position="inside">
-          <t t-set="o_portal_fullwidth_alert" groups="purchase.group_purchase_manager">
-              <t t-call="portal.portal_back_in_edit_mode">
+        <xpath expr="//div[hasclass('o_portal_sidebar')]" position="inside">
+            <t t-set="o_portal_fullwidth_alert" groups="purchase.group_purchase_manager">
+                <t t-call="portal.portal_back_in_edit_mode">
                   <t t-set="backend_url" t-value="'/web#model=%s&amp;id=%s&amp;action=%s&amp;view_type=form' % (order._name, order.id, order.env.ref('purchase.purchase_rfq').id)"/>
-              </t>
-          </t>
+                </t>
+            </t>
 
-          <div class="row mt16 o_portal_purchase_sidebar">
+            <div class="row mt16 o_portal_purchase_sidebar">
                 <!-- Sidebar -->
                 <t t-call="portal.portal_record_sidebar">
                     <t t-set="classes" t-value="'col-lg-3 d-print-none'"/>
@@ -175,6 +175,7 @@
                         </ul>
                     </t>
                 </t>
+            </div>
 
             <!-- Page content -->
             <div id="quote_content" class="col-12 col-lg-9">
