--- a/addons/web/static/src/core/dropdown/dropdown.scss
+++ b/addons/web/static/src/core/dropdown/dropdown.scss
@@ -77,6 +77,12 @@
     min-width: fit-content;
     min-height: fit-content;
 
+    &.popover {
+        // Sets the z-index to be the same as dialogs, this should ensure dropdowns
+        // appear behind or in front of dialogs based on the order they are opened.
+        z-index: 1055;
+    }
+
     .dropdown-toggle:focus,
     .dropdown-item:focus {
         background-color: transparent;
