--- a/addons/website_crm_partner_assign/views/website_crm_partner_assign_templates.xml
+++ b/addons/website_crm_partner_assign/views/website_crm_partner_assign_templates.xml
@@ -663,7 +663,7 @@
                                 <strong class="col-12 col-sm-3">Customer</strong>
                                 <div class="col">
                                     <div class="d-flex justify-content-start align-items-center gap-2 mb-2" t-if="opportunity.partner_name or opportunity.contact_name">
-                                        <img t-if="opportunity.partner_id.avatar_1024" class="o_portal_contact_img rounded-circle o_object_fit_cover" t-att-src="image_data_uri(opportunity.partner_id.avatar_1024)"
+                                        <img t-if="opportunity.partner_id.avatar_1024" class="o_portal_contact_img o_avatar rounded o_object_fit_cover" t-att-src="image_data_uri(opportunity.partner_id.avatar_1024)"
                                         alt="Contact" width="50"/>
                                         <div class="d-flex flex-column justify-content-center">
                                             <h5 class="mb-0" t-out="user_id.name"/>
