--- a/addons/payment/views/payment_portal_templates.xml
+++ b/addons/payment/views/payment_portal_templates.xml
@@ -84,7 +84,7 @@
                             <t t-if="providers or tokens" t-call="payment.manage"/>
                             <div t-else="" class="alert alert-warning">
                                 <p><strong>No suitable payment provider could be found.</strong></p>
-                                <p>If you believe that it is an error, please contact the website administrator.</p>
+                                If you believe that it is an error, please contact the website administrator.
                             </div>
                         </div>
                     </div>
