--- a/addons/web/static/src/search/cog_menu/cog_menu.scss
+++ b/addons/web/static/src/search/cog_menu/cog_menu.scss
@@ -1,16 +1,25 @@
 .o_cp_action_menus {
+    .o-dropdown {
+        min-width: 5px;
+    }
+}
+.o-dropdown--menu {
     .o_cp_action_app_icon {
         width: var(--oi-font-size, 1em);
         vertical-align: -0.2em;
     }
 
-    .o-dropdown {
-        min-width: 5px;
-    }
+    .dropdown-item {
+        & > .o_cp_action_app_icon {
+            // Temporary workaround until we'll support inline SVGs icons
+            // globally (eg. Spreadsheet's toolbar icons)
+            filter: saturate(0%) brightness(0%) invert(23%) sepia(7%) saturate(1896%) hue-rotate(179deg) brightness(91%) contrast(88%);
+        }
 
-    .dropdown-item:not(.focus) > .o_cp_action_app_icon {
-        // Temporary workaround until we'll support inline SVGs icons
-        // globally (eg. Spreadsheet's toolbar icons)
-        filter: saturate(0%) brightness(0%) invert(23%) sepia(7%) saturate(1896%) hue-rotate(179deg) brightness(91%) contrast(88%);
+        &.focus, &:hover, &.show {
+            & > .o_cp_action_app_icon {
+                filter: none;
+            }
+        }
     }
 }
