[FIX] website_slides: prevent course title overflow
This commit fixes the overflow of course title in backend kanban view and in the
front-end course page by cropping the title and adding '...' at end.

Task-3549639

--- a/addons/website_slides/views/slide_channel_views.xml
+++ b/addons/website_slides/views/slide_channel_views.xml
@@ -234,7 +234,7 @@
                                     <div class="o_kanban_card_header_title mb16">
                                         <div class="o_primary">
                                             <a type="edit" class="mr-auto">
-                                                <span><field name="name" class="o_primary"/></span>
+                                                <span class="o_text_overflow"><field name="name" class="o_primary"/></span>
                                             </a>
                                         </div>
                                         <div t-if="record.tag_ids">
