--- a/addons/website_slides/views/website_slides_templates_course.xml
+++ b/addons/website_slides/views/website_slides_templates_course.xml
@@ -129,7 +129,7 @@
                         <!-- ==== Header Right ==== -->
                         <div class="col-12 col-md-8 col-lg-9 d-flex flex-column">
                             <div class="d-flex flex-column">
-                                <h1 t-field="channel.name"/>
+                                <h1 t-field="channel.name" class="o_text_overflow"/>
                                 <p class="mb-0 mb-xl-3" t-field="channel.description"/>
 
                                 <div t-if="channel.channel_type == 'documentation'" class="d-flex mb-md-5">
