--- a/addons/account/views/account_tax_views.xml
+++ b/addons/account/views/account_tax_views.xml
@@ -44,6 +44,7 @@
                     <field name="tag_ids"
                            widget="many2many_tags"
                            options="{'no_create': True}"
+                           context="{'active_test': True}"
                            domain="tag_ids_domain"/>
                     <field name="use_in_tax_closing"
                            optional="hidden"
