[FIX] account: archived tags should not be visible
- Create an account tag for the country, with applicability taxes
- Add it to a repartition line of a tax
- Archive the tag

=> If you go see the tax, you still see the tag.
You can even add it to a new repartition line, while it is inactive

It's probably due to the fact that the tax itself transmit the
active_test value.
So, we add it to the context of the view.

--- a/addons/account/views/account_tax_views.xml
+++ b/addons/account/views/account_tax_views.xml
@@ -158,10 +158,10 @@
                             <div attrs="{'invisible': [('amount_type', '=', 'group')]}">
                                 <field name="country_code" invisible="1"/>
                                 <group string="Distribution for Invoices" class="mw-100">
-                                    <field name="invoice_repartition_line_ids" nolabel="1" colspan="2"/>
+                                    <field name="invoice_repartition_line_ids" context="{'active_test': True}" nolabel="1" colspan="2"/>
                                 </group>
                                 <group string="Distribution for Refunds" class="mw-100">
-                                    <field name="refund_repartition_line_ids" nolabel="1" colspan="2"/>
+                                    <field name="refund_repartition_line_ids" context="{'active_test': True}" nolabel="1" colspan="2"/>
                                 </group>
                             </div>
                             <field name="children_tax_ids" attrs="{'invisible':['|', ('amount_type','!=','group'), ('type_tax_use','=','none')]}" domain="[('type_tax_use','in',('none',type_tax_use)), ('amount_type','!=','group')]">
