[IMP] minor improvements

--- a/addons/analytic/static/src/components/analytic_distribution/analytic_distribution.scss
+++ b/addons/analytic/static/src/components/analytic_distribution/analytic_distribution.scss
@@ -41,7 +41,7 @@
     }
 
     .analytic_distribution_popup {
-        // width: 400px;
+        min-width: 400px;
         max-width: $o-form-sheet-min-width;
         max-height: 50vh;
         cursor: default;
