--- a/addons/stock/report/report_stockpicking_operations.xml
+++ b/addons/stock/report/report_stockpicking_operations.xml
@@ -115,8 +115,7 @@
                                             <span t-field="ml.product_id.description_picking">Description on transfer</span>
                                         </td>
                                         <td>
-                                            <span t-if="o.state != 'done'" t-field="ml.reserved_uom_qty">3.00</span>
-                                            <span t-else="" t-field="ml.quantity">3.00</span>
+                                            <span t-field="ml.quantity">3.00</span>
                                             <span t-field="ml.product_uom_id" groups="uom.group_uom">units</span>
                                             <span t-if="ml.move_id.product_packaging_id">
                                                 <span t-if="o.state != 'done'">
